--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 body {
   margin: 0;
   padding: 0;
@@ -7,9 +6,10 @@ body {
 }
 
 header {
-  background-color: #21A179;
+  background-color: #0FA958;
   color: #fff;
-  padding: 20px;
+  padding-top:5px;
+  padding-left: 10px;
   height: 80px;
   display: flex;
   justify-content: space-between;
@@ -32,11 +32,16 @@ nav a {
   margin-left: 10px;
   padding: 5px 10px;
   border-radius: 5px;
+  font-size: 22px;
+}
+
+nav a:first-child {
+  margin-right: 10px;
 }
 
 #det {
-  background-color: #2D2A32;
-  color: #fff;
+  background-color: #F7F0F5;
+  color: #474954;
   padding: 100px 0;
   background-image: url('background.jpg');
   background-repeat: no-repeat;
@@ -77,6 +82,7 @@ nav a {
 
 .det-description p {
   font-size: 15px;
+  color: #474954;
 }
 
 .download-link {
@@ -91,11 +97,12 @@ nav a {
 }
 
 .download-link:hover {
-  background-color: #eee;
+  background-color: #0FA958;
 }
 
 #features {
-  background-color: #474954;
+  position: relative;
+  background-color: #2D2A32;
   padding: 1px;
 }
 
@@ -107,6 +114,12 @@ nav a {
 .feature {
   text-align: center;
   margin-bottom: 50px;
+  opacity: 1;
+  transition: opacity 0.3s ease;
+}
+
+.feature.hidden {
+  opacity: 0;
 }
 
 .feature img {
@@ -120,3 +133,21 @@ nav a {
   color: #fff;
 }
 
+#nextButton {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 15px 30px; /* Increase padding for a bigger button */
+  font-size: 20px; /* Increase font size for a bigger button */
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  color: #333;
+  text-decoration: none;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+}
+
+#nextButton:hover {
+  background-color: #0FA958;
+}
