--- a/styles.css
+++ b/styles.css
@@ -40,30 +40,22 @@ nav a:first-child {
 }
 
 #det {
-  background-color: #F1F0EA;
-  color: #474954;
-  padding: 100px 0;
-  background-image: url('background.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-
-.container {
-  max-width: 960px;
-  margin: 0 auto;
-  padding: 0 20px;
+  background-color: #f2f2f2;
+  padding: 80px 0;
 }
 
 .det-content {
   display: flex;
+  justify-content: space-between;
   align-items: center;
 }
+
+.det-image {
+  flex: 1;
+  text-align: center;
+  margin-top: -50px;
+}
+
 
 .det-image img {
   max-width: 100%;
@@ -71,34 +63,59 @@ nav a:first-child {
 }
 
 .det-description {
-  text-align: center;
-  margin-right: 40px;
+  flex: 1;
+  margin-left: 40px;
 }
 
 .det-description h2 {
   font-size: 28px;
+  color: #474954;
   margin-bottom: 20px;
 }
 
 .det-description p {
-  font-size: 15px;
+  font-size: 16px;
   color: #474954;
+  margin-bottom: 30px;
 }
 
 .download-link {
   display: inline-block;
-  padding: 10px 20px;
-  border-radius: 20px;
-  background-color: #FDFFFC;
-  color: #333;
+  padding: 12px 24px;
+  border-radius: 25px;
+  background-color: #0FA958;
+  color: #fff;
   text-decoration: none;
   font-weight: bold;
   transition: background-color 0.3s ease;
 }
 
 .download-link:hover {
-  background-color: #0FA958;
-  color : white
+  background-color: #0C8346;
+}
+
+@media screen and (max-width: 768px) {
+  .det-content {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  
+  .det-image,
+  .det-description {
+    margin-left: 0;
+    text-align: center;
+  }
+  
+  .det-description p {
+    margin-bottom: 20px;
+  }
+}
+
+
+.container {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 
 #features {
