--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ nav a:first-child {
 }
 
 #det {
-  background-color: #f2f2f2;
+  background-color: #F1F0EA;
   padding: 80px 0;
 }
 
@@ -111,7 +111,6 @@ nav a:first-child {
   }
 }
 
-
 .container {
   max-width: 960px;
   margin: 0 auto;
@@ -122,8 +121,12 @@ nav a:first-child {
   position: relative;
   background-color: #2D2A32;
   padding: 1px;
+  height: 500px; /* Adjust the height as needed */
+  width: 100%; /* Adjust the width as needed */
+  background-size: cover; /* or background-size: contain; */
+  background-repeat: no-repeat;
+  background-position: center;
 }
-
 
 #features h3 {
   color: #fff;
