--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,7 @@ nav a:first-child {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: -50px;
 }
 
 .det-image {
